# Data-Structures-and-Algorithms

./: .gitignore  LICENSE  README.md  main.cs
C#/: CSharp.csproj  DoublyLinkedList.cs  HashTable.cs  LinkedLists.cs  LinkedListsGeneric.cs  main.cs  main.sln
C#/Array/: IMyArray.cs  MyArray.cs
C#/DoublyLinkedList/: DoublyLinkedList.cs  IMyDoublyLinkedLists.cs  MyIDoublyLinkedLists.cs
C#/HashTable/: IMyHashTable.cs  MyHashTable.cs
C#/LinkedList/: IMyLinkedList.cs  MyLinkedList.cs
C#/Queue/LinkedList/: IMyQueue.cs  MyQueue.cs
C#/Stack/Array/: IMyStack.cs  MyStack.cs
C#/Stack/LinkedList/: IMyStack.cs  MyStack.cs
C#/Tests/C#/CSharpTests/: ArrayTests.cs  CSharpTests.csproj
C#/Trees/: IMyTree.cs  MyTree.cs
C++/: CMakeLists.txt
C++/Array/: DynamicArray.h  StaticArray.h
C++/LinkedList/: SingleLinkedLists.h
C++/Tests/: DynamicArrayTests.cpp  SingleLinkedListTests.cpp  StaticArrayTests.cpp
